register email verify

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
+#mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create
+#server
 server.port=8081
+#gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=addressbooktest11@gmail.com
+spring.mail.password=kontotestowe1
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+#app
+app.url = http://localhost:${server.port}/
