added logger to services

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,10 @@
       "name": "app.url",
       "type": "java.lang.String",
       "description": "Application url."
-  }
-] }
+    },
+    {
+      "name": "app.registration.url",
+      "type": "java.lang.String",
+      "description": "Description for app.registration.url."
+    }
+  ] }
