Email message modified

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.mail.password=kontotestowe1
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #app
-app.registration.url = http://localhost:${server.port}/
+app.registration.url = http://localhost:${server.port}/register/
