--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,4 +13,7 @@ spring.mail.password=kontotestowe1
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #app
-app.registration.url = http://localhost:${server.port}/register/
+app.registration.url = http://localhost:8081/register/
+cross.url = http://localhost:4200
+jwt.secretKey = das786yaiuj2poid9w8$$yd7eqwkdjn23ryhu23griu23j
+jwt.expirationTime = 5 * 60 *60
