--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/addressbook?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create
@@ -15,5 +15,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #app
 app.registration.url = http://localhost:8081/register/
 cross.url = http://localhost:4200
-jwt.secretKey = das786yaiuj2poid9w8$$yd7eqwkdjn23ryhu23griu23j
-jwt.expirationTime = 5 * 60 *60
+jwt.login.secretKey = das786yaiuj2poid9w8$$yd7eqwkdjn23ryhu23griu23j
+jwt.registration.secretKey = thtrhbdregraewgdfghdhrtyhurtghbrthfgyhgfj
